k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retail-api-service
spec:
  selector:
    app: retail-api # This links the Service to the Pods labeled 'app: retail-api'
  ports:
    - protocol: TCP
      port: 80         # The port the Service listens on internally
      targetPort: 8000 # The port your FastAPI app is actually running on inside the container
  type: ClusterIP      # Internal network only
