k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-api-ingress
spec:
  ingressClassName: nginx  # <--- CHANGED THIS LINE
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retail-api-service
            port:
              number: 80
